--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.53.0",
+    "@vercel/analytics": "^1.5.0",
     "@xterm/xterm": "^5.5.0",
     "cowsay": "^1.6.0",
     "html2canvas": "^1.4.1",
