--- a/package.json
+++ b/package.json
@@ -10,22 +10,26 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.53.0",
+"@types/uuid": "^10.0.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "@xterm/xterm": "^5.5.0",
+"buffer": "^6.0.3",
     "cowsay": "^1.6.0",
+    "dotenv": "^17.2.2",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.536.0",
     "next": "15.4.5",
     "papaparse": "^5.5.3",
-    "react": "19.1.1",
+"react": "19.1.1",
     "react-dom": "19.1.1",
     "react-paginate": "^8.3.0",
-    "recharts": "^3.1.2"
+    "recharts": "^3.1.2",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
+"@types/node": "^20",
     "@types/papaparse": "^5.3.16",
     "@types/react": "^19",
     "@types/react-dom": "^19",
