--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "papaparse": "^5.5.3",
     "react": "19.1.1",
     "react-dom": "19.1.1",
+    "react-flag-icons": "^1.0.6",
     "react-leaflet": "^5.0.0",
     "react-paginate": "^8.3.0",
     "recharts": "^3.1.2",
