--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "generate-static": "node scripts/generate-static-data.js"
   },
   "dependencies": {
+    "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.53.0",
     "@turf/helpers": "^7.2.0",
     "@turf/union": "^7.2.0",
