--- a/.github/workflows/update-search-indexes.yml
+++ b/.github/workflows/update-search-indexes.yml
@@ -29,6 +29,7 @@ jobs:
       - name: Generate search indexes
         env:
           NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
+          NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
           SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
           NEXT_PUBLIC_SUPABASE_IWF_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_IWF_URL }}
           NEXT_PUBLIC_SUPABASE_IWF_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_IWF_ANON_KEY }}
