Update dev files to resolve some recurring auth issues

--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "predev": "node scripts/check-static-data.js",
+    "dev": "next dev --turbo",
+    "dev:clean": "npm run clean && npm run dev",
     "prebuild": "node scripts/generate-static-data.js && npm run generate-search",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "clean": "node scripts/clean-cache.js",
     "generate-static": "node scripts/generate-static-data.js",
     "generate-search": "node scripts/generate-search-indexes.js",
     "generate-rankings": "npx tsx scripts/generate-usaw-rankings.ts && npx tsx scripts/generate-iwf-rankings.ts",
