update related to supabase migration to self-hosted

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@turf/union": "^7.2.0",
     "@types/chroma-js": "^3.1.1",
     "@types/d3": "^7.4.3",
+    "@types/pg": "^8.15.6",
     "@types/uuid": "^10.0.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
@@ -41,6 +42,7 @@
     "minisearch": "^7.2.0",
     "next": "15.4.5",
     "papaparse": "^5.5.3",
+    "pg": "^8.16.3",
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "react-flag-icons": "^1.0.6",
