--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "lucide-react": "^0.536.0",
     "minisearch": "^7.2.0",
-    "next": "15.4.5",
+    "next": "^15.5.7",
     "papaparse": "^5.5.3",
     "pg": "^8.16.3",
     "react": "19.1.1",
