--- a/.github/workflows/update-search-indexes.yml
+++ b/.github/workflows/update-search-indexes.yml
@@ -1,10 +1,10 @@
 name: Update Search Indexes
 
-# Run weekly on Sundays at midnight UTC
+# Run daily at midnight UTC
 # Can also be triggered manually from the Actions tab
 on:
   schedule:
-    - cron: '0 0 * * 0'  # Every Sunday at 00:00 UTC
+    - cron: '0 0 * * *'  # Every day at 00:00 UTC
   workflow_dispatch:  # Allow manual trigger
 
 permissions:
