--- a/.github/workflows/update-current-year-rankings.yml
+++ b/.github/workflows/update-current-year-rankings.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Generate current year rankings
+      - name: Generate current year rankings and organizational data
         run: npm run generate-rankings-current
         env:
           NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
@@ -38,13 +38,13 @@ jobs:
       - name: Check for changes
         id: verify_diff
         run: |
-          git diff --quiet public/data/*-rankings-*.json.gz || echo "changed=true" >> $GITHUB_OUTPUT
+          git diff --quiet public/data/*-rankings-*.json.gz public/data/wso-data-*.json.gz public/data/*barbell-clubs-*.json.gz || echo "changed=true" >> $GITHUB_OUTPUT
 
       - name: Commit and push if changed
         if: steps.verify_diff.outputs.changed == 'true'
         run: |
           git config user.name "GitHub Actions Bot"
           git config user.email "actions@github.com"
-          git add public/data/*-rankings-*.json.gz
-          git commit -m "chore: update current year rankings [automated]"
+          git add public/data/*-rankings-*.json.gz public/data/wso-data-*.json.gz public/data/*barbell-clubs-*.json.gz
+          git commit -m "chore: update current year data (rankings, WSO, clubs) [automated]"
           git push
