--- a/.github/workflows/update-db-stats.yml
+++ b/.github/workflows/update-db-stats.yml
@@ -6,6 +6,9 @@ on:
     - cron: '0 4 * * *'
   workflow_dispatch: # Allow manual trigger
 
+permissions:
+  contents: write
+
 jobs:
   update-stats:
     runs-on: ubuntu-latest
