omni search bug squash

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "generate-search": "node scripts/generate-search-indexes.js",
     "generate-rankings": "npx tsx scripts/generate-usaw-rankings.ts && npx tsx scripts/generate-iwf-rankings.ts",
     "generate-rankings-current": "npx tsx scripts/generate-current-year-rankings.ts",
+    "generate-wso-club-index": "npx tsx scripts/generate-wso-club-search-index.ts",
     "generate-all": "npm run generate-static && npm run generate-search && npm run generate-rankings"
   },
   "dependencies": {
